@@ -4,10 +4,11 @@ import com.momo.momo_backend.entity.User;
 import com.momo.momo_backend.entity.UserCredential;
 import lombok.Getter;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 @Getter
 public class CustomUserDetails implements UserDetails {
@@ -36,7 +37,8 @@ public class CustomUserDetails implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();  // 권한 설정 안함
+        // 최소 USER 권한 부여
+        return List.of(new SimpleGrantedAuthority("ROLE_USER"));
     }
 
     @Override
